# cargo-quad-apk

./: .dockerignore  Cargo.toml  Dockerfile  README.md
cargo-apk/: Cargo.toml
cargo-apk/src/: config.rs  main.rs
cargo-apk/src/ops/: build.rs  run.rs
src/: config.rs  main.rs
src/ops/: build.rs  install.rs  run.rs
